--- a/miniproject.html
+++ b/miniproject.html
@@ -55,16 +55,58 @@
       </div>
       <div class="content-text">
         <h2>Learn to play music at home, at your own pace</h2>
-        <div class="">KeyNote makes learning to play an instrument fun and easy, no matter your skill level.<br><br>Follow lesson plans created by real music teachers, learn fast with interactive tutorials, and stay motivated with goals and progress tracking.<br><br>Our award-winning technology listens to you play and gives instant feedback on your accuracy and timing. You always know when you’re hitting the right notes.</div>
+        <div>KeyNote makes learning to play an instrument fun and easy, no matter your skill level.<br><br>Follow lesson plans created by real music teachers, learn fast with interactive tutorials, and stay motivated with goals and progress tracking.<br>
       </div>
     </div>
-    <div class="row1-detail"></div>
+    
   </div>
   <div class="row2">
-
+    <div class="content-text">
+      <h2>Fun, easy-to-follow lessons</h2>
+      <div>Play along with the app and get instant feedback on your precision and timing. Earn rewards, beat high scores, and level up as you learn new skills.</div>
+    </div>
+    <div class="content-image">
+      <img src="images/learn-guitar.jpg" alt="" height="500rem">
+    </div>
   </div>
-
-</div>
+  <div class="row3">
+    <div class="content-image">
+      <img src="images/learning-path.jpg" alt="" height="500rem">
+    </div>
+    <div class="content-text">
+      <h2>Personal learning path</h2>
+      <div>Learn the right skills at the right time with our lesson plans filled with thousands of lessons, exercises, and videos. Explore topics and songs for every level, and learn the techniques that matter to you.</div>
+      
+    </div>
+  </div>
+  
+  <footer class="footer">
+    <div class="footer-content">
+      <div class="footer-section about">
+        <h2>About Us</h2>
+        <p>We bring you the best music knowledge from around the world, featuring experts and a vast collection of instruments. Join us in celebrating music that moves the soul!</p>
+      </div>
+  
+      <div class="footer-section contact">
+        <h2>Contact Us</h2>
+        <p>Email: parasmadan3105@gmail.com</p>
+        <p>Phone: +91 9213772040</p>
+        <p>Address: GL Bajaj Institute, Grtr Noida</p>
+      </div>
+  
+      <div class="footer-section social">
+        <h2>Follow Us</h2>
+        <a href="#" aria-label="linkedin"><i class="fab fa-linkedin"></i></a>
+        <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+      </div>
+    </div>
+  
+    <div class="footer-bottom">
+      <p>&copy; 2024 KeyNote. All rights reserved.</p>
+    </div>
+  </footer>
   
 </body>
 </html>
