--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Interactive instrument Learning</h1>
+        <h1>Interactive Instrument Learning</h1>
         <nav>
             <ul>
                 <li><a href="#Home">Home</a></li>
@@ -55,10 +55,10 @@
                 <h3>Drum</h3>
                 <img src="images/drum.png" alt="Drum" width="200">
             </li>
-            <li>
+            <!-- <li>
                 <h3>Electric-Guitar</h3>
                 <img src="images/eguitar.png" alt="EGuitar" width="200">
-            </li>
+            </li> -->
         </ul>
     </section>
     
@@ -71,27 +71,27 @@
 
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
-            <button type="submit">Submit</button>
+            <button class="btn" type="submit">Submit</button>
         </form>
     </section>
 
     <section id="signin">
         <h2>Sign In</h2>
-        <form action="mp2.php">  
+        <form action="miniproject.html">  
             <label for="signin-email">Email:</label>
             <input type="email" id="signin-email" name="signin-email" required>
 
             <label for="signin-password">Password:</label>
             <input type="password" id="signin-password" name="signin-password" required>
 
-            <button type="submit">Sign In</button>
+            <button class="btn" type="submit">Sign In</button>
         </form>
     </section>
 
     <footer id="contact">
         <h2>Contact Us</h2>
-        <p>Email: info@ourwebsite.com</p>
-        <p>Phone: (123) 456-7890</p>
+        <p>Email: parasmadan3105@gmail.com</p>
+        <p>Phone: +91 9213772040</p>
     </footer>
 </body>
 </html>
