--- a/miniproject.html
+++ b/miniproject.html
@@ -14,7 +14,7 @@
     <span>KeyNote</span></a>
   </div>
   <div class="nav-mid">
-    <a href="">Instruments</a><a href="">Plans</a><a href="">Exercises</a><a href="">About</a>
+    <a href="./navbar-redirects/Index1.html">Instruments</a><a href="./navbar-redirects/index2.html">Plans</a><a href="./navbar-redirects/index3.html">Exercises</a><a href="./navbar-redirects/index4.html">About</a>
   </div>
   <div class="nav-right">
     <a href="" ><i class="fa-solid fa-user"></i></a>
