--- a/miniproject.html
+++ b/miniproject.html
@@ -28,7 +28,7 @@
       <span class="content-body">Discover the joy of learning your favorite instrument with expert-guided lessons. <br>
         Begin your musical adventure now!</span>
     </div>
-    <button class="btn start-btn">Get Started</button>
+    ,<a href="index.html"><button class="btn start-btn">Get Started</button></a>
   </div>
   <div class="row1">
     <div class="row1-instrument">
