--- a/navbar-redirects/index4.html
+++ b/navbar-redirects/index4.html
@@ -34,6 +34,17 @@
             </div>
         </div>
     </section>
+    <footer>
+        <h2>Contact Us</h2>
+        <p>Email: <a href="mailto:keynoteOfficial@gmail.com">keynoteOfficial@gmail.com</a></p>
+        <p>Follow us on: 
+            <a href="#">Facebook</a> | 
+            <a href="#">Twitter</a> | 
+            <a href="#">Instagram</a>
+        </p>
+        <p>&copy; 2024 KeyNote Music Academy. All rights reserved.</p>
+    </footer>
+
 
     
 </body>
