--- a/navbar-redirects/index2.html
+++ b/navbar-redirects/index2.html
@@ -49,7 +49,15 @@
     </section>
 
     <footer>
-        <p>© 2024 MusicPro. All Rights Reserved.</p>
+        <h2>Contact Us</h2>
+        <p>Email: <a href="mailto:keynoteOfficial@gmail.com">keynoteOfficial@gmail.com</a></p>
+        <p>Follow us on: 
+            <a href="#">Facebook</a> | 
+            <a href="#">Twitter</a> | 
+            <a href="#">Instagram</a>
+        </p>
+        <p>&copy; 2024 KeyNote Music Academy. All rights reserved.</p>
     </footer>
+
 </body>
 </html>
