player folder add

--- a/navbar-redirects/index.html
+++ b/navbar-redirects/index.html
@@ -15,7 +15,7 @@
             <div class="instrument-card"> 
                 <h3>Guitar</h3>
                 <p>Learn chords, scales, and your favorite songs with real-time feedback.</p>
-                <a href="https://en.wikipedia.org/wiki/Guitar" class="btn">Start Learning</a>
+                <a href="../player/player.html" class="btn">Start Learning</a>
             </div>
 
             <div class="instrument-card">
