--- a/navbar-redirects/index.html
+++ b/navbar-redirects/index.html
@@ -34,6 +34,11 @@
                 <p>Play fun, easy songs while learning chords and strumming patterns.</p>
                 <a href="https://en.wikipedia.org/wiki/Ukulele" class="btn">Start Learning</a>
             </div>
+            <div class="instrument-card">
+                <h3>E-Guitar</h3>
+                <p>Play fun, easy songs while learning chords and strumming patterns.</p>
+                <a href="https://en.wikipedia.org/wiki/Ukulele" class="btn">Start Learning</a>
+            </div>
         </div>
     </section>
 
