--- a/player/player.html
+++ b/player/player.html
@@ -55,10 +55,11 @@
               <iframe 
                   width="560" 
                   height="315" 
-                  src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
+                  src="https://www.youtube.com/embed/1ANma3HMfSU"
                   title="YouTube video player" 
                   frameborder="0" 
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                  referrerpolicy="strict-origin-when-cross-origin" 
                   allowfullscreen>
               </iframe>
           </div>
@@ -73,14 +74,14 @@
             <button class="play">Play Video</button>
             <div id="video-container">
               <iframe 
-                  width="560" 
-                  height="315" 
-                  src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
-                  title="YouTube video player" 
-                  frameborder="0" 
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                  allowfullscreen>
-              </iframe>
+              width="560" 
+              height="315" 
+              src="https://www.youtube.com/embed/827jmswqnEA" 
+              title="YouTube video player" 
+              frameborder="0" 
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+              referrerpolicy="strict-origin-when-cross-origin" 
+              allowfullscreen></iframe>
           </div>
           </td>
           <td><input type="checkbox" /></td>
@@ -139,7 +140,7 @@
     </p>
     <p>&copy; 2024 KeyNote Music Academy. All rights reserved.</p>
 </footer>
-
+<script src="script.js"></script>
 </body>
 </html>
 
