added sounds to instruments on landing page

--- a/miniproject.html
+++ b/miniproject.html
@@ -34,11 +34,12 @@
     <div class="row1-instrument">
       <span class="instrument-text">Popular <br> Instruments:</span>
       <span class="instrument-images">
-        <img src="images/guitar.png" alt="" class="guitar">
-        <img src="images/piano.png" alt="" class="piano">
-        <img src="images/flute.png" alt="" class="flute">
-        <img src="images/drum.png" alt="" class="drum">
-        <img src="images/eguitar.png" alt="" class="eguitar">
+        <img src="images/guitar.png" alt="" class="guitar sound-btn">
+        <img src="images/piano.png" alt="" class="piano sound-btn">
+        <img src="images/flute.png" alt="" class="flute sound-btn">
+        <img src="images/drum.png" alt="" class="drum sound-btn">
+        <img src="images/eguitar.png" alt="" class="eguitar sound-btn">
+        <span class="tooltip-text">Click to Play Sound</span>
       </span>
       <div></div>
       <ul>
@@ -109,4 +110,5 @@
   </footer>
   
 </body>
+<script src="landing.js"></script>
 </html>
