--- a/miniproject.html
+++ b/miniproject.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>KeyNote</title>
   <link rel="stylesheet" href="mp.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
@@ -17,7 +17,7 @@
     <a href="./navbar-redirects/Index.html">Instruments</a><a href="./navbar-redirects/index2.html">Plans</a><a href="./navbar-redirects/index3.html">Exercises</a><a href="./navbar-redirects/index4.html">About</a>
   </div>
   <div class="nav-right">
-    <a href="" ><i class="fa-solid fa-user"></i></a>
+    <a href="" ><i class="fa-solid fa-user"></i><span id="username">Paras Madan&nbsp;&nbsp;&nbsp;</span></a>
     <a href="index.html"> <button class="btn login-btn">Login</button></a>
   </div>
 </div>
