--- a/navbar-redirects/index.html
+++ b/navbar-redirects/index.html
@@ -3,41 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learn Instruments | Music Academy</title>
+    <title>KeyNote | Instruments</title>
     <link rel="stylesheet" href="instruments.css">
 </head>
 <body>
 
     <section id="instruments" class="instruments">
         <h2> Instruments</h2>
+        <p>Chose the Music Instrument you want to learn.</p>
         <div class="instrument-list">
 
             <div class="instrument-card"> 
                 <h3>Guitar</h3>
                 <p>Learn chords, scales, and your favorite songs with real-time feedback.</p>
-                <a href="../player/player.html" class="btn">Start Learning</a>
+                <a href="../player/player.html?section=1" class="btn">Start Learning</a>
             </div>
 
             <div class="instrument-card">
                 <h3>Piano</h3>
                 <p>Interactive lessons to master playing with both hands and reading music.</p>
-                <a href="https://en.wikipedia.org/wiki/Piano" class="btn">Start Learning</a>
+                <a href="../player/player.html?section=2" class="btn">Start Learning</a>
             </div>
             
             <div class="instrument-card">
                 <h3>Flute</h3>
                 <p>Play fun, easy songs while learning chords and strumming patterns.</p>
-                <a href="https://en.wikipedia.org/wiki/Flute" class="btn">Start Learning</a>
+                <a href="../player/player.html?section=3" class="btn">Start Learning</a>
             </div>
             <div class="instrument-card">
                 <h3>Drums</h3>
                 <p>Play fun, easy songs while learning chords and strumming patterns.</p>
-                <a href="https://en.wikipedia.org/wiki/Ukulele" class="btn">Start Learning</a>
+                <a href="../player/player.html?section=4" class="btn">Start arning</a>
             </div>
             <div class="instrument-card">
                 <h3>E-Guitar</h3>
                 <p>Play fun, easy songs while learning chords and strumming patterns.</p>
-                <a href="https://en.wikipedia.org/wiki/Ukulele" class="btn">Start Learning</a>
+                <a href="../player/player.html?section=5" class="btn">Start Learning</a>
             </div>
         </div>
     </section>
