--- a/navbar-redirects/index2.html
+++ b/navbar-redirects/index2.html
@@ -21,7 +21,7 @@
                     <li>Basic tutorials for beginners</li>
                     <li>Access to 5 songs per day</li>
                 </ul>
-                <a href="#" class="btn">Get Started</a>
+                <a href="index.html" class="btn">Get Started</a>
             </div>
 
             <div class="plan-card">
