--- a/player/player.html
+++ b/player/player.html
@@ -8,34 +8,34 @@
 </head>
 <body>
   <header>
-    <h1>A2Z Instrument Learning Sheet</h1>
-    <p>Track your progress and learn Guitar, Piano, and Drums step by step!</p>
+    <h1>Instrument Learning Sheet</h1>
+    <p>Track your progress and learn every instrument step-by-step!</p>
   </header>
 
-  <section>
-    <h2>Instrument Learning Table</h2>
+  <section id="section-1">
+    <h2>Guitar Learning</h2>
     <table>
       <thead>
         <tr>
-          <th>#</th>
-          <th>Topic</th>
-          <th>Instrument</th>
-          <th>Video</th>
-          <th>Progress</th>
+          <th id="1">#</th>
+          <th id="2">Topic</th>
+          <th id="3">Difficulty</th>
+          <th id="4">Video</th>
+          <th id="5">Progress</th>
         </tr>
       </thead>
       <tbody>
         <tr>
           <td>1</td>
-          <td>Choosing an Instrument</td>
+          <td>Introduction</td>
           <td>General</td>
           <td>
             <button class="play">Play Video</button>
     <div id="video-container">
         <iframe 
-            width="560" 
+            width="660" 
             height="315" 
-            src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
+            src="https://www.youtube.com/embed/5_yOVARO2Oc" 
             title="YouTube video player" 
             frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
@@ -48,7 +48,126 @@
         <tr>
           <td>2</td>
           <td>Understanding Guitar Anatomy</td>
-          <td>Guitar</td>
+          <td>Beginner</td>
+          <td>
+            <button class="play">Play Video</button>
+            <div id="video-container">
+              <iframe 
+                  width="560" 
+                  height="315" 
+                  src="https://www.youtube.com/embed/1ANma3HMfSU"
+                  title="YouTube video player" 
+                  frameborder="0" 
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                  referrerpolicy="strict-origin-when-cross-origin" 
+                  allowfullscreen>
+              </iframe>
+          </div>
+          </td>
+          <td><input type="checkbox" /></td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>Basic Guitar Chords</td>
+          <td>Beginner</td>
+          <td>
+            <button class="play">Play Video</button>
+            <div id="video-container">
+              <iframe 
+              width="560" 
+              height="315" 
+              src="https://www.youtube.com/embed/R_qmvyUDvEc" 
+              title="YouTube video player" 
+              frameborder="0" 
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+              referrerpolicy="strict-origin-when-cross-origin" 
+              allowfullscreen></iframe>
+          </div>
+          </td>
+          <td><input type="checkbox" /></td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>Guitar Exercises</td>
+          <td>Intermediate</td>
+          <td>
+            <button class="play">Play Video</button>
+            <div id="video-container">
+              <iframe 
+                  width="560" 
+                  height="315" 
+                  src="https://www.youtube.com/embed/62K1dZ9lK7w" 
+                  title="YouTube video player" 
+                  frameborder="0" 
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                  allowfullscreen>
+              </iframe>
+          </div>
+          </td>
+          <td><input type="checkbox" /></td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td>Simple Melody</td>
+          <td>Hard</td>
+          <td>
+            <button class="play">Play Video</button>
+            <div id="video-container">
+              <iframe 
+                  width="560" 
+                  height="315" 
+                  src="https://www.youtube.com/embed/xo6kMzhUHVI" 
+                  title="YouTube video player" 
+                  frameborder="0" 
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                  allowfullscreen>
+              </iframe>
+          </div>
+          </td>
+          <td><input type="checkbox" /></td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
+
+
+  <section id="section-2">
+    <h2> Piano Learning</h2>
+    <table>
+      <thead>
+        <tr>
+          <th id="1">#</th>
+          <th id="2">Topic</th>
+          <th id="3">Difficulty</th>
+          <th id="4">Video</th>
+          <th id="5">Progress</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>Introduction</td>
+          <td>General</td>
+          <td>
+            <button class="play">Play Video</button>
+    <div id="video-container">
+        <iframe 
+            width="660" 
+            height="315" 
+            src="https://www.youtube.com/embed/5_yOVARO2Oc" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            allowfullscreen>
+        </iframe>
+    </div>
+          </td>
+          <td><input type="checkbox" /></td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Understanding Piano Anatomy</td>
+          <td>Beginner</td>
           <td>
             <button class="play">Play Video</button>
             <div id="video-container">
@@ -69,7 +188,7 @@
         <tr>
           <td>3</td>
           <td>Learning Basic Piano Notes</td>
-          <td>Piano</td>
+          <td>Beginner</td>
           <td>
             <button class="play">Play Video</button>
             <div id="video-container">
@@ -88,8 +207,8 @@
         </tr>
         <tr>
           <td>4</td>
-          <td>Basic Guitar Chords</td>
-          <td>Guitar</td>
+          <td>Basic Piano Exercises</td>
+          <td>Intermediate</td>
           <td>
             <button class="play">Play Video</button>
             <div id="video-container">
@@ -108,8 +227,364 @@
         </tr>
         <tr>
           <td>5</td>
-          <td>Pentatonic Scales</td>
-          <td>Guitar</td>
+          <td>Simple Piano Melody</td>
+          <td>Hard</td>
+          <td>
+            <button class="play">Play Video</button>
+            <div id="video-container">
+              <iframe 
+                  width="560" 
+                  height="315" 
+                  src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
+                  title="YouTube video player" 
+                  frameborder="0" 
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                  allowfullscreen>
+              </iframe>
+          </div>
+          </td>
+          <td><input type="checkbox" /></td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
+
+  <section id="section-3">
+    <h2>Flute Learning</h2>
+    <table>
+      <thead>
+        <tr>
+          <th id="1">#</th>
+          <th id="2">Topic</th>
+          <th id="3">Difficulty</th>
+          <th id="4">Video</th>
+          <th id="5">Progress</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>Introduction</td>
+          <td>General</td>
+          <td>
+            <button class="play">Play Video</button>
+    <div id="video-container">
+        <iframe 
+            width="660" 
+            height="315" 
+            src="https://www.youtube.com/embed/5_yOVARO2Oc" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            allowfullscreen>
+        </iframe>
+    </div>
+          </td>
+          <td><input type="checkbox" /></td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Understanding Flute Anatomy</td>
+          <td>Beginner</td>
+          <td>
+            <button class="play">Play Video</button>
+            <div id="video-container">
+              <iframe 
+                  width="560" 
+                  height="315" 
+                  src="https://www.youtube.com/embed/1ANma3HMfSU"
+                  title="YouTube video player" 
+                  frameborder="0" 
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                  referrerpolicy="strict-origin-when-cross-origin" 
+                  allowfullscreen>
+              </iframe>
+          </div>
+          </td>
+          <td><input type="checkbox" /></td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>Learning Basic Flute Notes</td>
+          <td>Beginner</td>
+          <td>
+            <button class="play">Play Video</button>
+            <div id="video-container">
+              <iframe 
+              width="560" 
+              height="315" 
+              src="https://www.youtube.com/embed/827jmswqnEA" 
+              title="YouTube video player" 
+              frameborder="0" 
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+              referrerpolicy="strict-origin-when-cross-origin" 
+              allowfullscreen></iframe>
+          </div>
+          </td>
+          <td><input type="checkbox" /></td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>Basic Flute Exercises</td>
+          <td>Intermediate</td>
+          <td>
+            <button class="play">Play Video</button>
+            <div id="video-container">
+              <iframe 
+                  width="560" 
+                  height="315" 
+                  src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
+                  title="YouTube video player" 
+                  frameborder="0" 
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                  allowfullscreen>
+              </iframe>
+          </div>
+          </td>
+          <td><input type="checkbox" /></td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td>Simple Flute Melody</td>
+          <td>Hard</td>
+          <td>
+            <button class="play">Play Video</button>
+            <div id="video-container">
+              <iframe 
+                  width="560" 
+                  height="315" 
+                  src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
+                  title="YouTube video player" 
+                  frameborder="0" 
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                  allowfullscreen>
+              </iframe>
+          </div>
+          </td>
+          <td><input type="checkbox" /></td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
+
+  <section id="section-4">
+    <h2>Drums Learning</h2>
+    <table>
+      <thead>
+        <tr>
+          <th id="1">#</th>
+          <th id="2">Topic</th>
+          <th id="3">Difficulty</th>
+          <th id="4">Video</th>
+          <th id="5">Progress</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>Introduction</td>
+          <td>General</td>
+          <td>
+            <button class="play">Play Video</button>
+    <div id="video-container">
+        <iframe 
+            width="660" 
+            height="315" 
+            src="https://www.youtube.com/embed/5_yOVARO2Oc" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            allowfullscreen>
+        </iframe>
+    </div>
+          </td>
+          <td><input type="checkbox" /></td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Understanding Drumset Anatomy</td>
+          <td>Beginner</td>
+          <td>
+            <button class="play">Play Video</button>
+            <div id="video-container">
+              <iframe 
+                  width="560" 
+                  height="315" 
+                  src="https://www.youtube.com/embed/1ANma3HMfSU"
+                  title="YouTube video player" 
+                  frameborder="0" 
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                  referrerpolicy="strict-origin-when-cross-origin" 
+                  allowfullscreen>
+              </iframe>
+          </div>
+          </td>
+          <td><input type="checkbox" /></td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>Learning Basic Drum Beats</td>
+          <td>Beginner</td>
+          <td>
+            <button class="play">Play Video</button>
+            <div id="video-container">
+              <iframe 
+              width="560" 
+              height="315" 
+              src="https://www.youtube.com/embed/827jmswqnEA" 
+              title="YouTube video player" 
+              frameborder="0" 
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+              referrerpolicy="strict-origin-when-cross-origin" 
+              allowfullscreen></iframe>
+          </div>
+          </td>
+          <td><input type="checkbox" /></td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>Basic Drum Exercises</td>
+          <td>Intermediate</td>
+          <td>
+            <button class="play">Play Video</button>
+            <div id="video-container">
+              <iframe 
+                  width="560" 
+                  height="315" 
+                  src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
+                  title="YouTube video player" 
+                  frameborder="0" 
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                  allowfullscreen>
+              </iframe>
+          </div>
+          </td>
+          <td><input type="checkbox" /></td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td>Simple Drum Melody</td>
+          <td>Hard</td>
+          <td>
+            <button class="play">Play Video</button>
+            <div id="video-container">
+              <iframe 
+                  width="560" 
+                  height="315" 
+                  src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
+                  title="YouTube video player" 
+                  frameborder="0" 
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                  allowfullscreen>
+              </iframe>
+          </div>
+          </td>
+          <td><input type="checkbox" /></td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
+
+
+  <section id="section-5">
+    <h2>Electric-guitar Learning</h2>
+    <table>
+      <thead>
+        <tr>
+          <th id="1">#</th>
+          <th id="2">Topic</th>
+          <th id="3">Difficulty</th>
+          <th id="4">Video</th>
+          <th id="5">Progress</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>Introduction</td>
+          <td>General</td>
+          <td>
+            <button class="play">Play Video</button>
+    <div id="video-container">
+        <iframe 
+            width="660" 
+            height="315" 
+            src="https://www.youtube.com/embed/5_yOVARO2Oc" 
+             
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            allowfullscreen>
+        </iframe>
+    </div>
+          </td>
+          <td><input type="checkbox" /></td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Understanding E-Guitar Anatomy</td>
+          <td>Beginner</td>
+          <td>
+            <button class="play">Play Video</button>
+            <div id="video-container">
+              <iframe 
+                  width="560" 
+                  height="315" 
+                  src="https://www.youtube.com/embed/1ANma3HMfSU"
+                  title="YouTube video player" 
+                  frameborder="0" 
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                  referrerpolicy="strict-origin-when-cross-origin" 
+                  allowfullscreen>
+              </iframe>
+          </div>
+          </td>
+          <td><input type="checkbox" /></td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>Learning Basic Guitar Chords</td>
+          <td>Beginner</td>
+          <td>
+            <button class="play">Play Video</button>
+            <div id="video-container">
+              <iframe 
+              width="560" 
+              height="315" 
+              src="https://www.youtube.com/embed/827jmswqnEA" 
+              title="YouTube video player" 
+              frameborder="0" 
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+              referrerpolicy="strict-origin-when-cross-origin" 
+              allowfullscreen></iframe>
+          </div>
+          </td>
+          <td><input type="checkbox" /></td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>Basic E-Guitar Exercises</td>
+          <td>Intermediate</td>
+          <td>
+            <button class="play">Play Video</button>
+            <div id="video-container">
+              <iframe 
+                  width="560" 
+                  height="315" 
+                  src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
+                  title="YouTube video player" 
+                  frameborder="0" 
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                  allowfullscreen>
+              </iframe>
+          </div>
+          </td>
+          <td><input type="checkbox" /></td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td>Simple E-Guitar Riff</td>
+          <td>Hard</td>
           <td>
             <button class="play">Play Video</button>
             <div id="video-container">
