--- a/miniproject.html
+++ b/miniproject.html
@@ -14,7 +14,7 @@
     <span>KeyNote</span></a>
   </div>
   <div class="nav-mid">
-    <a href="./navbar-redirects/Index.html">Instruments</a><a href="./navbar-redirects/index2.html">Plans</a><a href="./navbar-redirects/index3.html">Exercises</a><a href="./navbar-redirects/index4.html">About</a>
+    <a href="./navbar-redirects/index.html">Instruments</a><a href="./navbar-redirects/index2.html">Plans</a><a href="./navbar-redirects/index3.html">Exercises</a><a href="./navbar-redirects/index4.html">About</a>
   </div>
   <div class="nav-right">
     <a href="" ><i class="fa-solid fa-user"></i><span id="username">Paras Madan&nbsp;&nbsp;&nbsp;</span></a>
